--- a/pr-preview/pr-407/_sources/examples/streamlake/loading_data_part4.ipynb
+++ b/pr-preview/pr-407/_sources/examples/streamlake/loading_data_part4.ipynb
@@ -4,18 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  # Loading Data Part 4\n",
+    "# Loading Data Part 4\n",
     "\n",
-    "  This example shows how do that save and load those stream and lake settings dictionaries. This is useful if you want to save your settings and then load them later.  This is also useful if you want to share your settings with someone else.  Or just stop from having to retype everything."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  ## Working path\n",
+    "In this part of the tutorial, we will explore how to save and load stream and lake settings dictionaries. This can be incredibly useful for preserving your settings, sharing them with others, or simply avoiding the need to retype everything.\n",
     "\n",
-    "  In the working path you now see a couple of `.json` files, these are the settings files.  The `lake_settings.json` file contains the settings for the lake.  The `stream_settings.json` file contains the settings for the stream.  These are the same settings that you created in the previous example.  The only difference is that they are now saved to a file.\n",
+    "## Working Path\n",
+    "\n",
+    "In your working path, you will find a couple of `.json` files. These files are the settings files. The `lake_settings.json` file stores the settings for the lake, while the `stream_settings.json` file stores the settings for the stream. These settings are the same ones you created in the previous example, but now they are saved to files for easy access and sharing.\n",
+    "\n",
     "\n",
     " ```\n",
     " data\n",
@@ -34,17 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to data folder:\n",
+      "\\data\\tests\\example_data\n"
+     ]
+    }
+   ],
    "source": [
-    "# all the imports\n",
+    "# Import the necessary libraries and modules\n",
     "import matplotlib.pyplot as plt\n",
     "from particula.data import loader_interface, settings_generator\n",
     "from particula.data.tests.example_data.get_example_data import get_data_folder\n",
     "from particula.data.lake import Lake\n",
     "\n",
-    "# set the parent directory of the data folders\n",
+    "# Set the parent directory where the data folders are located\n",
     "path = get_data_folder()\n",
     "print('Path to data folder:')\n",
     "print(path.rsplit('particula')[-1])"
@@ -54,14 +59,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Generate the settings and save them\n",
+    "## Generate and Save Settings\n",
     "\n",
-    " We'll use `generate_settings.save_settings_for_stream` to"
+    "First, we generate the settings for the CPC data using the `settings_generator.for_general_1d_load` function. These settings include details such as the data file location, file format, column names, and more.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +103,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Next save the SMPS settings\n"
+    "### Next save the SMPS settings\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,16 +178,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the Stream settings\n",
+    "## Loading Stream Settings\n",
     "\n",
-    "If you are still exploring you anlaysis pipeline, you may what individual streams. To load the settings for a stream use `generate_settings.load_settings_for_stream`.  This function takes the path to the settings file as an argument.  It returns a dictionary with the settings."
+    "If you are still exploring your analysis pipeline, you may want to load settings for individual streams. To do so, you can use the generate_settings.load_settings_for_stream function. This function takes the path to the settings file as an argument and returns a dictionary containing the stream settings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Loading file: 2022-07-07_095151_SMPS.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Loading file: 2022-07-10_094659_SMPS.csv\n",
+      "['Lower_Size_(nm)', 'Upper_Size_(nm)', 'Sample_Temp_(C)', 'Sample_Pressure_(kPa)', 'Relative_Humidity_(%)', 'Median_(nm)', 'Mean_(nm)', 'Geo_Mean_(nm)', 'Mode_(nm)', 'Geo_Std_Dev.', 'Total_Conc_(#/cc)']\n"
+     ]
+    }
+   ],
    "source": [
     "smps_1d_stream_settings = settings_generator.load_settings_for_stream(\n",
     "    path=path,\n",
@@ -202,14 +223,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lake settings\n",
+    "## Lake settings\n",
     "\n",
     "If you wanted to load everything for a reanalysis, instead of calling each individual stream, you can first save a lake settings file.  This is done with `generate_settings.save_settings_for_lake`.  This function takes the path to the lake settings file as an argument.  It returns a dictionary with the settings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,9 +261,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder Settings: cpc\n",
+      "  Loading file: CPC_3010_data_20220709_Jul.csv\n",
+      "  Loading file: CPC_3010_data_20220710_Jul.csv\n",
+      "Folder Settings: smps_1d\n",
+      "  Loading file: 2022-07-07_095151_SMPS.csv\n",
+      "  Loading file: 2022-07-10_094659_SMPS.csv\n",
+      "Folder Settings: smps_2d\n",
+      "  Loading file: 2022-07-07_095151_SMPS.csv\n",
+      "  Loading file: 2022-07-10_094659_SMPS.csv\n",
+      " \n",
+      "Lake with streams: ['cpc', 'smps_1d', 'smps_2d']\n"
+     ]
+    }
+   ],
    "source": [
     "lake_settings = settings_generator.load_settings_for_lake(\n",
     "    path=path,\n",
@@ -270,36 +309,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function save_settings_for_stream in module particula.data.settings_generator:\n",
+      "\n",
+      "save_settings_for_stream(settings: dict, path: str, subfolder: str, settings_suffix: str = '') -> None\n",
+      "    Save settings for lake data to a JSON file.\n",
+      "    \n",
+      "    Given a dictionary of settings, this function saves it to a JSON file\n",
+      "    named 'stream_settings' with an optional suffix in the specified filename.\n",
+      "    The JSON file is formatted with a 4-space indentation.\n",
+      "    \n",
+      "    Args:\n",
+      "    - settings: The settings dictionary to be saved.\n",
+      "    - path: The path where the subfolder is located.\n",
+      "    - subfolder: The subfolder where the settings file will be saved.\n",
+      "    - settings_suffix: An optional suffix for the settings\n",
+      "        file name. Default is an empty string.\n",
+      "    \n",
+      "    Returns:\n",
+      "    - None\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(settings_generator.save_settings_for_stream)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function load_settings_for_stream in module particula.data.settings_generator:\n",
+      "\n",
+      "load_settings_for_stream(path: str, subfolder: str, settings_suffix: str = '') -> dict\n",
+      "    Load settings for Stream data from a JSON file.\n",
+      "    \n",
+      "    Given a path and subfolder, this function searches for a JSON file\n",
+      "    named 'stream_settings' with an optional suffix. It returns the settings\n",
+      "    as a dictionary. If no file is found, or multiple files are found,\n",
+      "    appropriate errors or warnings are raised.\n",
+      "    \n",
+      "    Args:\n",
+      "    - path: The path where the subfolder is located.\n",
+      "    - subfolder: The subfolder where the settings file is expected.\n",
+      "    - settings_suffix: An optional suffix for the settings\n",
+      "        file name. Default is an empty string.\n",
+      "    \n",
+      "    Returns:\n",
+      "    - dict: A dictionary of settings loaded from the file.\n",
+      "    \n",
+      "    Raises:\n",
+      "    - FileNotFoundError: If no settings file is found.\n",
+      "    - Warning: If more than one settings file is found.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(settings_generator.load_settings_for_stream)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function save_settings_for_lake in module particula.data.settings_generator:\n",
+      "\n",
+      "save_settings_for_lake(settings: dict, path: str, subfolder: str = '', settings_suffix: str = '') -> None\n",
+      "    Save settings for lake data to a JSON file.\n",
+      "    \n",
+      "    Given a dictionary of settings, this function saves it to a JSON file\n",
+      "    named 'lake_settings' with an optional suffix in the specified filename.\n",
+      "    The JSON file is formatted with a 4-space indentation.\n",
+      "    \n",
+      "    Args:\n",
+      "    - settings: The settings dictionary to be saved.\n",
+      "    - path: The path where the subfolder is located.\n",
+      "    - subfolder: The subfolder where the settings file will be saved.\n",
+      "    - settings_suffix: An optional suffix for the settings\n",
+      "        file name. Default is an empty string.\n",
+      "    \n",
+      "    Returns:\n",
+      "    - None\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(settings_generator.save_settings_for_lake)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function load_settings_for_lake in module particula.data.settings_generator:\n",
+      "\n",
+      "load_settings_for_lake(path: str, subfolder: str = '', settings_suffix: str = '') -> dict\n",
+      "    Load settings for Lake data from a JSON file. The settings file is\n",
+      "    a dictionary of stream settings dictionaries.\n",
+      "    \n",
+      "    Given a path and subfolder, this function searches for a JSON file\n",
+      "    named 'lake_settings' with an optional suffix. It returns the settings\n",
+      "    as a dictionary. If no file is found, or multiple files are found,\n",
+      "    appropriate errors or warnings are raised.\n",
+      "    \n",
+      "    Args:\n",
+      "    - path: The path where the subfolder is located.\n",
+      "    - subfolder: The subfolder where the settings file is expected.\n",
+      "    - settings_suffix: An optional suffix for the settings\n",
+      "        file name. Default is an empty string.\n",
+      "    \n",
+      "    Returns:\n",
+      "    - dict: A dictionary of settings loaded from the file.\n",
+      "    \n",
+      "    Raises:\n",
+      "    - FileNotFoundError: If no settings file is found.\n",
+      "    - Warning: If more than one settings file is found.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(settings_generator.load_settings_for_lake)"
    ]
