--- a/pr-preview/pr-445/_sources/documentation/next/next_gas.ipynb
+++ b/pr-preview/pr-445/_sources/documentation/next/next_gas.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -323,6 +323,9 @@
       " |  \n",
       " |  __eq__(self, other)\n",
       " |      Return self==value.\n",
+      " |  \n",
+      " |  __getitem__(self, index: int) -> particula.next.gas_species.GasSpecies\n",
+      " |      Returns the gas species at the given index.\n",
       " |  \n",
       " |  __init__(self, temperature: float, total_pressure: float, species: list[particula.next.gas_species.GasSpecies] = <factory>) -> None\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
