--- a/pr-preview/pr-445/_sources/documentation/next/next_particle.ipynb
+++ b/pr-preview/pr-445/_sources/documentation/next/next_particle.ipynb
@@ -14,19 +14,23 @@
     "\n",
     "### Key Components:\n",
     "\n",
-    "- **`ParticleStrategy`**: An abstract base class that outlines the common interface for calculating particle mass, radius, and total mass.\n",
-    "- **`MassBasedStrategy`**: A concrete strategy for particles represented by their mass distribution.\n",
-    "- **`RadiiBasedStrategy`**: Focuses on particles defined by their radius (size distribution).\n",
-    "- **`SpeciatedMassStrategy`**: Tailored for particles with a distribution across different species, each potentially having distinct densities.\n",
+    "**`ParticleStrategy`**: An abstract base class that outlines the common interface for calculating particle mass, radius, and total mass.\n",
+    "\n",
+    "- **MovingBins**: Are a collection of strategies that move the bins in a distribution, when mass is added or removed from the system. This is useful for simulating the movement of particles in a system.\n",
+    "    - **`MassBaseMovingBin`**: A concrete strategy for particles represented by their mass distribution.\n",
+    "    - **`RadiiBasedMovingBin`**: Focuses on particles defined by their radius (size distribution).\n",
+    "    - **`SpeciatedMassMovingBin`**: Tailored for particles with a distribution across different species, each potentially having distinct densities.\n",
     "\n",
     "The `distribution` is the x-axis of a particle distribution, so it can be mass, radius, or species-masses. The `concentration` are the y-axis of the distribution, currently all number-concentration. It is these two parameters that define the particle distribution, and they change depending on the strategy.\n",
+    "\n",
+    "Additional strategies can be added to the system `ParticleStrategy`, such as a PDF representation of the distribution, or fixed bins that do not move.\n",
     "\n",
     "By adopting these strategies, we can easily switch between different methods of representing particle distributions, enabling more nuanced simulations and analyses of aerosol behavior.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -42,26 +46,30 @@
    "source": [
     "# Example demonstrating the usage of particle distribution strategies\n",
     "\n",
-    "# Assuming necessary imports\n",
+    "# necessary imports\n",
     "import numpy as np\n",
     "from particula.next.particle import (\n",
     "    create_particle_strategy,\n",
     "    Particle,\n",
-    "    MassBasedStrategy,\n",
-    "    RadiiBasedStrategy,\n",
-    "    SpeciatedMassStrategy,\n",
+    "    MassBasedMovingBin,\n",
+    "    RadiiBasedMovingBin,\n",
+    "    SpeciatedMassMovingBin\n",
     ")\n",
+    "from particula.next.particle_activity import particle_activity_strategy_factory\n",
+    "from particula.next.surface import surface_strategy_factory\n",
     "\n",
     "# Creating particle distribution examples\n",
-    "mass_distribution = np.array([100, 200, 300], dtype=np.float64)\n",
-    "density = np.float64(2.5)\n",
-    "concentration = np.array([10, 20, 30], dtype=np.float64)\n",
+    "mass_distribution = np.array([100, 200, 300], dtype=np.float_)\n",
+    "density = 2.5\n",
+    "concentration = np.array([10, 20, 30], dtype=np.float_)\n",
     "\n",
     "# Instantiate a particle strategy\n",
-    "mass_based_strategy = MassBasedStrategy()\n",
+    "mass_based_strategy = MassBasedMovingBin()\n",
     "\n",
     "# Create a Particle instance using the MassBasedStrategy\n",
     "particle = Particle(strategy=mass_based_strategy,\n",
+    "                    activity=particle_activity_strategy_factory(),\n",
+    "                    surface=surface_strategy_factory(),\n",
     "                    distribution=mass_distribution,\n",
     "                    density=density,\n",
     "                    concentration=concentration)\n",
@@ -106,14 +114,14 @@
    ],
    "source": [
     "# Example: Creating a mass-based particle strategy\n",
-    "mass_based_strategy = create_particle_strategy(\"mass_based\")\n",
+    "mass_based_strategy = create_particle_strategy(\"mass_based_moving_bin\")\n",
     "\n",
     "# Now, initialize a Particle instance using the mass-based strategy\n",
     "# Example particle sizes in meters\n",
-    "particle_distribution = np.array([1e-9, 2e-9, 3e-9], dtype=np.float64)\n",
-    "particle_density = np.float64(1000)  # Example density in kg/m^3\n",
+    "particle_distribution = np.array([1e-9, 2e-9, 3e-9], dtype=np.float_)\n",
+    "particle_density = np.float_(1000)  # Example density in kg/m^3\n",
     "particle_concentration = np.array(\n",
-    "    [1000, 2000, 3000], dtype=np.float64)  # Example concentrations\n",
+    "    [1000, 2000, 3000], dtype=np.float_)  # Example concentrations\n",
     "\n",
     "particle = Particle(\n",
     "    strategy=mass_based_strategy,\n",
@@ -170,9 +178,9 @@
     "mass_based_particle = Particle(\n",
     "    strategy=mass_based_strategy,\n",
     "    # Example mass distribution\n",
-    "    distribution=np.array([10, 20, 30], dtype=np.float64),\n",
-    "    density=np.float64(2.5),\n",
-    "    concentration=np.array([1000, 2000, 3000], dtype=np.float64)\n",
+    "    distribution=np.array([10, 20, 30], dtype=np.float_),\n",
+    "    density=np.float_(2.5),\n",
+    "    concentration=np.array([1000, 2000, 3000], dtype=np.float_)\n",
     ")\n",
     "\n",
     "# Instantiate a Particle with a Number-Based Strategy\n",
@@ -180,9 +188,9 @@
     "radii_based_particle = Particle(\n",
     "    strategy=radii_based_strategy,\n",
     "    # Example size distribution\n",
-    "    distribution=np.array([10, 20, 30], dtype=np.float64),\n",
-    "    density=np.float64(1.5),\n",
-    "    concentration=np.array([500, 100, 200], dtype=np.float64)\n",
+    "    distribution=np.array([10, 20, 30], dtype=np.float_),\n",
+    "    density=np.float_(1.5),\n",
+    "    concentration=np.array([500, 100, 200], dtype=np.float_)\n",
     ")\n",
     "\n",
     "# Demonstrating how Particle class methods provide a consistent interface\n",
